# my-llm-twin

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/: export-guide.md
my_llm_twin/: __init__.py  cli.py  config.py
my_llm_twin/chat/: engine.py
my_llm_twin/dataset/: builder.py  segmenter.py
my_llm_twin/parsers/: __init__.py  base.py  extractor.py  io.py  language_filter.py  messenger.py
my_llm_twin/training/: trainer.py
tests/: test_builder.py  test_config.py  test_extractor.py  test_language_filter.py  test_messenger_parser.py  test_parsed_io.py  test_segmenter.py
